# testing-opengl

./: CMakeLists.txt  README.md  build.bat
include/: simpler_renderer.h
include/glad/: glad.h
lib/: simpler_renderer.cpp
projects/hello-square/: CMakeLists.txt
projects/hello-square/src/: main.cpp
projects/hello-triangle/: CMakeLists.txt
projects/hello-triangle-1/: CMakeLists.txt
projects/hello-triangle-1/src/: main.cpp
projects/hello-triangle-2/: CMakeLists.txt
projects/hello-triangle-2/src/: main.cpp  simpler_renderer.cpp
projects/hello-triangle-3/: CMakeLists.txt
projects/hello-triangle-3/src/: glad.c  main.cpp
projects/hello-triangle/src/: main.cpp
projects/shaders/: CMakeLists.txt
projects/shaders-1/: CMakeLists.txt
projects/shaders-1/src/: main.cpp  shader.vs
projects/shaders-2/: CMakeLists.txt
projects/shaders-2/src/: main.cpp  shader.fs  shader.vs
projects/shaders-3/: CMakeLists.txt
projects/shaders-3/src/: main.cpp  shader.h  shader.vs
projects/shaders/src/: main.cpp  shader.vs  simpler_renderer.cpp
projects/textures/: CMakeLists.txt
projects/textures/src/: main.cpp  shader.fs  shader.vs
